--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             ⚠️ NOTA: La disponibilidad y precios de los productos se deben consultar directamente vía WhatsApp.
         </p>
 
-        <div class="product-grid">
+       <!--<div class="product-grid">
             <div class="product-item">
                 <img src="WhatsApp Image 2026-02-09 at 9.47.08 PM.jpeg" alt="Franelas de Cerezas">
                 <p>Franelas Estampadas Cerezas</p>
@@ -242,7 +242,34 @@
             </div>
         
         
-        </div>
+        </div>-->
+
+        <div class="product-grid">
+                <div class="product-item"><img src="producto (1).jpg" alt="Producto 1"><p>Conjunto / Top Casual</p></div>
+                <div class="product-item"><img src="producto (2).jpg" alt="Producto 2"><p>Franela Gymshark Negra</p></div>
+                <div class="product-item"><img src="producto (3).jpg" alt="Producto 3"><p>Franela Gymshark Gris</p></div>
+                <div class="product-item"><img src="producto (4).jpg" alt="Producto 4"><p>Franela Gymshark Blanca</p></div>
+                <div class="product-item"><img src="producto (5).jpg" alt="Producto 5"><p>Bolso Elegante Beige</p></div>
+                <div class="product-item"><img src="producto (6).jpg" alt="Producto 6"><p>Mini Bolso Rosa</p></div>
+                <div class="product-item"><img src="producto (7).jpg" alt="Producto 7"><p>Bolso Estampado Cerezas</p></div>
+                <div class="product-item"><img src="producto (8).jpg" alt="Producto 8"><p>Bolso Corazón / Rojo</p></div>
+                <div class="product-item"><img src="producto (9).jpg" alt="Producto 9"><p>Top Deportivo Rosa</p></div>
+                <div class="product-item"><img src="producto (10).jpg" alt="Producto 10"><p>Accesorio / Bandana Negra</p></div>
+                <div class="product-item"><img src="producto (11).jpg" alt="Producto 11"><p>Franela Oversize Azul</p></div>
+                <div class="product-item"><img src="producto (12).jpg" alt="Producto 12"><p>Set de Franelas Básicas</p></div>
+                <div class="product-item"><img src="producto (13).jpg" alt="Producto 13"><p>Bolso de Mano Negro</p></div>
+                <div class="product-item"><img src="producto (14).jpg" alt="Producto 14"><p>Detalle Regalo / Joyero</p></div>
+                <div class="product-item"><img src="producto (15).jpg" alt="Producto 15"><p>Cartera de Hombro Negra</p></div>
+                <div class="product-item"><img src="producto (16).jpg" alt="Producto 16"><p>Franela Blanca Estampada</p></div>
+                <div class="product-item"><img src="producto (17).jpg" alt="Producto 17"><p>Sudadera Gris</p></div>
+                <div class="product-item"><img src="producto (18).jpg" alt="Producto 18"><p>Franela Oversize Negra</p></div>
+                <div class="product-item"><img src="producto (19).jpg" alt="Producto 19"><p>Franela Diseño Especial</p></div>
+                <div class="product-item"><img src="producto (20).jpg" alt="Producto 20"><p>Sudadera Azul Marino</p></div>
+                <div class="product-item"><img src="producto (21).jpg" alt="Producto 21"><p>Franela Gris Básica</p></div>
+                <div class="product-item"><img src="producto (22).jpg" alt="Producto 22"><p>Franela Blanca Clásica</p></div>
+                <div class="product-item"><img src="producto (23).jpg" alt="Producto 23"><p>Bolso Pastel</p></div>
+                <div class="product-item"><img src="producto (24).jpg" alt="Producto 24"><p>Bolso Bandolera Beige</p></div>
+            </div>
 
         <div style="text-align: center; margin-top: 30px;">
             <a href="https://wa.me/584121222680" class="btn" style="background: #25d366; color: white; border: none; padding: 15px 30px;">
