Cambios en productos

--- a/index.html
+++ b/index.html
@@ -250,13 +250,15 @@
                 <div class="product-item"><img src="producto (3).jpg" alt="Producto 3"><p>Franela Gymshark Gris</p></div>
                 <div class="product-item"><img src="producto (4).jpg" alt="Producto 4"><p>Franela Gymshark Blanca</p></div>
                 <div class="product-item"><img src="producto (5).jpg" alt="Producto 5"><p>Bolso Elegante Beige</p></div>
-                <div class="product-item"><img src="producto (6).jpg" alt="Producto 6"><p>Mini Bolso Rosa</p></div>
-                <div class="product-item"><img src="producto (7).jpg" alt="Producto 7"><p>Bolso Estampado Cerezas</p></div>
-                <div class="product-item"><img src="producto (8).jpg" alt="Producto 8"><p>Bolso Corazón / Rojo</p></div>
+                <div class="product-item"><img src="producto (6).jpg" alt="Producto 6"><p>Bolso Estampado Cerezas Rosa</p></div>
+                <div class="product-item"><img src="producto (7).jpg" alt="Producto 7"><p>Bolso Estampado Cerezas Rojo </p></div>
+                <div class="product-item"><img src="producto (8).jpg" alt="Producto 8"><p>Bolso Estampado Cereza Beige</p></div>
+                <div class="product-item"><img src="producto (10).jpeg" alt="Producto 10"><p>Bolso Estampado Cereza Negro</p></div>
+                <div class="product-item"><img src="producto (4).jpg" alt="Producto 4"><p>Bolso Estampado Cereza Blanco</p></div>
                 <div class="product-item"><img src="producto (9).jpg" alt="Producto 9"><p>Top Deportivo Rosa</p></div>
-                <div class="product-item"><img src="producto (10).jpg" alt="Producto 10"><p>Accesorio / Bandana Negra</p></div>
+                <div class="product-item"><img src="producto (10).jpg" alt="Producto 10"><p>Top Casual</p></div>
                 <div class="product-item"><img src="producto (11).jpg" alt="Producto 11"><p>Franela Oversize Azul</p></div>
-                <div class="product-item"><img src="producto (12).jpg" alt="Producto 12"><p>Set de Franelas Básicas</p></div>
+                <div class="product-item"><img src="producto (12).jpg" alt="Producto 12"><p>Franelas Básicas</p></div>
                 <div class="product-item"><img src="producto (13).jpg" alt="Producto 13"><p>Bolso de Mano Negro</p></div>
                 <div class="product-item"><img src="producto (14).jpg" alt="Producto 14"><p>Detalle Regalo / Joyero</p></div>
                 <div class="product-item"><img src="producto (15).jpg" alt="Producto 15"><p>Cartera de Hombro Negra</p></div>
