Cambios en productos 2

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <div class="product-item"><img src="producto (7).jpg" alt="Producto 7"><p>Bolso Estampado Cerezas Rojo </p></div>
                 <div class="product-item"><img src="producto (8).jpg" alt="Producto 8"><p>Bolso Estampado Cereza Beige</p></div>
                 <div class="product-item"><img src="producto (10).jpeg" alt="Producto 10"><p>Bolso Estampado Cereza Negro</p></div>
-                <div class="product-item"><img src="producto (4).jpg" alt="Producto 4"><p>Bolso Estampado Cereza Blanco</p></div>
+                <div class="product-item"><img src="producto (4).jpeg" alt="Producto 4"><p>Bolso Estampado Cereza Blanco</p></div>
                 <div class="product-item"><img src="producto (9).jpg" alt="Producto 9"><p>Top Deportivo Rosa</p></div>
                 <div class="product-item"><img src="producto (10).jpg" alt="Producto 10"><p>Top Casual</p></div>
                 <div class="product-item"><img src="producto (11).jpg" alt="Producto 11"><p>Franela Oversize Azul</p></div>
@@ -391,4 +391,5 @@
 </body>
 
 </html>
+
 
