--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@
             <p><strong>📸 Instagram:</strong> <a href="https://instagram.com/DanisSTORE" target="_blank">@Dani's STORE</a></p>
             <p><strong>📧 Correo:</strong> Flog1225@gmail.com</p>
             <p><strong>📍 Dirección:</strong> Macarapana, Sucre.</p>
-            <div style="background: #eee;  display: flex; align-items: center; justify-content: center;">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15683.919887179101!2d-63.22149045532024!3d10.65866226932796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c33dd5b9044e0f9%3A0xc9ffcdc3adf9fc21!2sMacarapana%206150%2C%20Sucre!5e0!3m2!1ses!2sve!4v1771021058813!5m2!1ses!2sve" style="border:0; width: 100%; height: 100%;" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+             <div style="background: #eee;  display: flex; align-items: center; justify-content: center;">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3920.9771470077817!2d-63.2209054249598!3d10.658881589482801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDM5JzMyLjAiTiA2M8KwMTMnMDYuMCJX!5e0!3m2!1ses!2sve!4v1771964900282!5m2!1ses!2sve" style="border:0; width: 100%; height: 100%;" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         <a href="#inicio" class="back-btn">← Volver al Inicio</a>
@@ -391,5 +392,6 @@
 </body>
 
 </html>
+
 
 
